Added the currency extension
