# api/points_api.rb
@@ -23,9 +23,9 @@ LoyaltyApp.add_route('POST', '/api/user/{userId}/points', {
     ]}) do
   cross_origin
 
-  return 400 unless User.valid_user_points(params["eurosSpent"], params["isRide"])
+  return 400 unless User.valid_user_points(params["moneySpent"], params["isRide"])
   User.find_or_404(params["userId"]) do |user|
-    user.add_points(params["eurosSpent"].to_f, params["isRide"])
+    user.add_points(params["moneySpent"].to_f, params["isRide"], params["foreignCurrencyCode"])
     user.save!
     200
   end
